Create fonts and routes for images

--- a/YoTeArriendo/app/index.html
+++ b/YoTeArriendo/app/index.html
@@ -14,7 +14,7 @@
 
     {{content-for "head-footer"}}
   </head>
-  <body background="https://www.chivasmedellinonline.com/images/servicios/Tour-piedra-penol/125242442424.jpg">
+  <body background="/assets/Image/inicio.jpg">
     {{content-for "body"}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
