Modificacion parte visual v2

--- a/YoTeArriendo/app/index.html
+++ b/YoTeArriendo/app/index.html
@@ -14,7 +14,7 @@
 
     {{content-for "head-footer"}}
   </head>
-  <body background="/assets/Image/inicio.jpg">
+  <body background="/assets/Image/inicio.png">
     {{content-for "body"}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
